Added Footer, still need to make responsive.

--- a/public/index.html
+++ b/public/index.html
@@ -119,5 +119,12 @@
 			</ul>
 		</div>
 	</div>
+	<div class="bottom">
+		<h2 class="bottom-text">
+			If you enjoyed this demo you might also like:
+		</h2>
+		<img src="images/5.png">
+		<img src="images/6.png">
+	</div>
 </body>
 </html>
