Everything on website is good to go. Just need to make it responsive.

--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,17 @@
 			If you enjoyed this demo you might also like:
 		</h2>
 		<img src="images/5.png">
+			<span class="bottom-p">
+				<a href="#">
+				Blog dreamcatcher squid
+				</a>
+			</span>
 		<img src="images/6.png">
+			<span class="bottom-p2">
+				<a href="#">
+				Stumptown Brooklyn
+				</a>
+			</span>
 	</div>
 </body>
 </html>
