Simplified the html and css, grouping the image and text together.

--- a/public/index.html
+++ b/public/index.html
@@ -39,12 +39,8 @@
 		</span>
 	</div>
 	<div class="row">
-		<div class="photo">
+		<div class="row2">
 			<img src="images/1.png" alt="ceiling">
-			<span class="phototitle">Hoodie stumptown kitsch</span>
-			<span class="date">05/05/2015</span>
-		</div>
-		<div class="photo-right">
 			<ul class="description">
 				<li>
 					<i class="fa fa-camera"></i>
@@ -64,14 +60,12 @@
 				</li>
 			</ul>
 		</div>
+		<span class="phototitle">Hoodie stumptown kitsch</span>
+		<span class="date">05/05/2015</span>
 	</div>
 	<div class="row">
-		<div class="photo">
+		<div class="row2">
 			<img src="images/2.png" alt="ceiling">
-			<span class="phototitle">Hoodie stumptown kitsch</span>
-			<span class="date">05/05/2015</span>
-		</div>
-		<div class="photo-right">
 			<ul class="description">
 				<li>
 					<i class="fa fa-camera"></i>
@@ -91,14 +85,12 @@
 				</li>
 			</ul>
 		</div>
+		<span class="phototitle">Hoodie stumptown kitsch</span>
+		<span class="date">05/05/2015</span>
 	</div>
 	<div class="row">
-		<div class="photo">
+		<div class="row2">
 			<img src="images/3.png" alt="ceiling">
-			<span class="phototitle">Hoodie stumptown kitsch</span>
-			<span class="date">05/05/2015</span>
-		</div>
-		<div class="photo-right">
 			<ul class="description">
 				<li>
 					<i class="fa fa-camera"></i>
@@ -118,6 +110,8 @@
 				</li>
 			</ul>
 		</div>
+		<span class="phototitle">Hoodie stumptown kitsch</span>
+		<span class="date">05/05/2015</span>
 	</div>
 	<div class="bottom">
 		<h2 class="bottom-text">
