--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
 			If you enjoyed this demo you might also like:
 		</h2>
 			<div class="bottom-t">
-				<img src="images/5.png">
+				<img src="images/5.png" alt="bottom1">
 				<a href="#">
 				Stumptown Brooklyn
 				</a>
 			</div>
 			<div class="bottom-t">
-				<img src="images/6.png">
+				<img src="images/6.png" alt="bottom2">
 				<a href="#">
 				Blog Dreamcatcher Squid
 				</a>
